--- a/stylesheets/_media.scss
+++ b/stylesheets/_media.scss
@@ -1007,7 +1007,7 @@ $xwidescreen-: $xwidescreen - .01em;
     }
   }
 
-  .mobile-menu-wrap {
+  .mobile-menu-wrap-open {
     span {
       font-size: 2.1em;
     }
@@ -1231,7 +1231,7 @@ $xwidescreen-: $xwidescreen - .01em;
     display: none;
   }
 
-  .mobile-menu-wrap {
+  .mobile-menu-wrap-open {
     span {
       font-size: 1.5em;
     }
